--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <button class="button center" onclick="play();location.href = 'https://discordapp.com/users/622702599468220446/'">contact</button>
             <br>
             <button class="button center" onclick="playoof()">oof</button>
+            <br>
+            <button class="button center" onclick="play();error()">about</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
    </div>
