--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <button class="button center" onclick="playoof()">oof</button>
             <br>
-            <button class="button center" onclick="play();error()">about</button>
+            <button class="button center" onclick="play();error666()">somethin'</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
    </div>
