--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html id="html">
  <body>
   <head>
      <script src="clickingsound.js"></script>
@@ -21,9 +21,10 @@
             <br>
             <button class="button center" onclick="playoof()">oof</button>
             <br>
-            <button class="button center" onclick="play();error666()">somethin'</button>
+            <button class="button center" onclick="play();error666()">3 times</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
+     <audio id="error666" src="random.click.ogg"></audio>
    </div>
   </footer>
  </body>
