--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="button center" onclick="play();error666()">3 times</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
-     <audio id="error666" src="random.click.ogg"></audio>
+     <audio id="error666" src="error.666.ogg"></audio>
    </div>
   </footer>
  </body>
