--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <button class="button center" onclick="playoof()">oof</button>
             <br>
-            <button class="button center" onclick="play();error666()">3 times</button>
+            <button class="button center" onclick="play();error666()">just do it ugh📊📊📊</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
      <audio id="error666" src="error.666.ogg"></audio>
