--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html id="html">
- <body>
+<html>
+ <body id="html">
   <head>
      <script src="clickingsound.js"></script>
      <script src="oof.js"></script>
@@ -21,7 +21,7 @@
             <br>
             <button class="button center" onclick="playoof()">oof</button>
             <br>
-            <button class="button center" onclick="play();error666()">just do it ugh📊📊📊</button>
+            <button class="button center" onclick="play();error666()">kks okay uhm uhh press me 3x</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
      <audio id="error666" src="error.666.ogg"></audio>
