--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html>
- <body id="html">
+<html id="errl">
+ <body>
   <head>
      <script src="clickingsound.js"></script>
      <script src="oof.js"></script>
@@ -24,7 +24,7 @@
             <button class="button center" onclick="play();error666()">rlly???</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
-     <audio id="error666" src="error.666.ogg"></audio>
+     <audio id="errors" src="error.666.ogg"></audio>
    </div>
   </footer>
  </body>
