--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br>
             <button class="button center" onclick="playoof()">oof</button>
             <br>
-            <button class="button center" onclick="play();error666()">rlly???</button>
+            <button class="button center" onclick="play();err()">rlly???</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
      <audio id="errors" src="error.666.ogg"></audio>
