--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <body>
   <head>
      <script src="clickingsound.js"></script>
+     <script src="err.js"></script>
      <script src="oof.js"></script>
      <img src="logo.png" class="logo">
      <link rel="stylesheet" href="style.css">
