--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html id="errl">
  <body>
   <head>
+     <title>E</title>
      <script src="clickingsound.js"></script>
      <script src="err.js"></script>
      <script src="oof.js"></script>
