--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <br>
             <button class="button center" onclick="playoof()">oof</button>
             <br>
-            <button class="button erbtn" onclick="play();err()">rlly???<span class="errtext">wow ur rlly gonna click this buttons 3 times to unlock a secret??? pffttt just imagine</span></button>
+            <button class="button ttbtn" onclick="play();err()">???<span class="tttext">wow ur rlly gonna click this buttons 3 times to unlock a secret??? pffttt just imagine</span></button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
      <audio id="errors" src="error.666.ogg"></audio>
