--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html id="errl">
  <body>
   <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>E</title>
      <script src="clickingsound.js"></script>
      <script src="err.js"></script>
