--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html id="errl">
  <body>
   <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta charset=“UTF-8”>
+     <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+     <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
      <title>E</title>
      <script src="clickingsound.js"></script>
      <script src="err.js"></script>
