--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
      <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
      <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
      <title>E</title>
-     <script src="https://parv66.github.io/parv66.inc/clickingsound.js"></script>
-     <script src="https://parv66.github.io/parv66.inc/err.js"></script>
-     <script src="https://parv66.github.io/parv66.inc/oof.js"></script>
+     <script src="clickingsound.js"></script>
+     <script src="err.js"></script>
+     <script src="oof.js"></script>
      <img src="logo.png" class="logo">
-     <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
+     <link rel="stylesheet" href="style.css">
   </head>
   <footer>
    <div class="footer">
