--- a/404.html
+++ b/404.html
@@ -1,7 +1,18 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <head>
-      <a>E</a>
-    </head>
-  </body>
+<body>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <script src="clickingsound.js"></script>
+  </head>
+<h1>Hey There! You Seem Lost...</h1>
+<h2>Yhis I'snt The Page You're Looking For...</h2>
+<br>
+<button class="button" onclick="play();location.href = 'https://www.parv66.tk'"> >Take Help</button>
+<br>
+<button class="button" onclick="play();location.href = 'E'"> >Leave</button>
+<br>
+<button class="button" onclick="play();location.href = 'E'"> >Ignore</button>
+<audio id="buttonclick" src="random.click.ogg"></audio>
+</body>
 </html>
