--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script src="clickingsound.js"></script>
   </head>
 <h1>Hey There! You Seem Lost...</h1>
-<h2>Yhis I'snt The Page You're Looking For...</h2>
+<h2>This I'snt The Page You're Looking For...</h2>
 <br>
 <button class="button" onclick="play();location.href = 'https://www.parv66.tk'"> >Take Help</button>
 <br>
