--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This I'snt The Page You're Looking For...</h2>
 <br>
-<button class="button" onclick="play();location.href = 'https://www.parv66.tk'"> >Take Help</button>
+<button class="button" onclick="play();location.href = 'https://parv66.tk/'"> >Take Help</button>
 <br>
 <button class="button" onclick="play();location.href = 'E'"> >Leave</button>
 <br>
