--- a/404.html
+++ b/404.html
@@ -8,11 +8,11 @@
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This I'snt The Page You're Looking For...</h2>
 <br>
-<button class="button" onclick="play();location.href = 'https://parv66.tk/'"> >Take Help</button>
+<button class="button" onclick="play();location.href = 'https://parv66.tk/'"> > Take Help</button>
 <br>
-<button class="button" onclick="play();location.href = 'E'"> >Leave</button>
+<button class="button" onclick="play();location.href = '.'"> > Leave</button>
 <br>
-<button class="button" onclick="play();location.href = 'E'"> >Ignore</button>
+<button class="button" onclick="play();location.href = '.'"> > Ignore</button>
 <audio id="buttonclick" src="random.click.ogg"></audio>
 </body>
 </html>
