--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html id="errl">
  <head>
      <meta charset=“UTF-8”>
+     <meta name="keywords" content="parv66, PARV66.INC, PARV66 IS COOL, PARV66, parv66.inc, PARV66.inc, parvv">
      <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
      <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
      <title>E</title>
