--- a/404.html
+++ b/404.html
@@ -14,5 +14,6 @@
 <br>
 <button class="button" onclick="play();location.href = '.'"> > Ignore</button>
 <audio id="buttonclick" src="random.click.ogg"></audio>
+<img class="fofimg" src="shaded-refine.png" alt="fofhi" height="300px">
 </body>
 </html>
