--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <br>
 <button class="button" onclick="play();location.href = 'https://parv66.tk/'"> > Take Help</button>
 <br>
-<button class="button" href="#" onclick="play();leave();return false> > Leave</button>
+<button class="button" href="#" onclick="play();leave();return false"> > Leave</button>
 <br>
 <button class="button" onclick="play();location.href = '.'"> > Ignore</button>
 <audio id="buttonclick" src="random.click.ogg"></audio>
