--- a/creations/index.html
+++ b/creations/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="./creations/creations.css">
+    <link rel="stylesheet" href="./style.css">
+  </head>
   <body>
     <div class="main1">
   <h1>Large Chest</h1>
