--- a/creations/index.html
+++ b/creations/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./creations/creations.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="creations.css">
+    <link rel="stylesheet" href="https://parv66.tk/style.css">
   </head>
   <body>
     <div class="main1">
