--- a/creations/index.html
+++ b/creations/index.html
@@ -8,7 +8,7 @@
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
-    <div class="box"></div>
+    <div class="box copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
@@ -104,9 +104,9 @@
   </div>
   
   <div class="boxes3">
-    <div class="box"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
-    <div class="box"><a href="#"><i class="fab fa-linkedin-in"></i></a></div>
-    <div class="box"><a href="#"><i class="fab fa-codepen"></i></a></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
