--- a/creations/index.html
+++ b/creations/index.html
@@ -8,7 +8,7 @@
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
-    <div class="box copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics"></div>
+    <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"></a></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
