--- a/creations/index.html
+++ b/creations/index.html
@@ -9,7 +9,7 @@
   <h1>Large Chest</h1>
   <div class="boxes">
     <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"></a></div>
-    <div class="box"></div>
+    <div class="box"><span class="minetext" data-mctitle="Orange">🍊</span></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
