--- a/creations/index.html
+++ b/creations/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
+    <script src="creations.js"></script>
   </head>
   <body>
     <div class="main1">
