--- a/creations/index.html
+++ b/creations/index.html
@@ -6,11 +6,14 @@
     <script src="creations.js"></script>
   </head>
   <body>
+    <div id="minetip-tooltip">
+  <span class="minetip-title" id="minetip-text">Minecraft Tip</span>
+</div>
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
     <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"></a></div>
-    <div class="box test1"><span class="minetext" data-mctitle="Orange">elo</span></div>
+    <div class="box"><span class="minetext" data-mctitle="Orange">🍊</span</div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
