--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://parv66.tk/style.css">
     <script src="clickingsound.js"></script>
     <script src="leave.js"></script>
   </head>
