--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 <body>
   <head>
     <link rel="stylesheet" href="https://parv66.tk/style.css">
-    <script src="clickingsound.js"></script>
-    <script src="leave.js"></script>
+    <script src="https://parv66.tk/clickingsound.js"></script>
+    <script src="https://parv66.tk/leave.js"></script>
   </head>
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This Isn't The Page You're Looking For...</h2>
@@ -14,7 +14,7 @@
 <button class="button" href="#" onclick="play();leave();return false"> > Leave</button>
 <br>
 <button class="button" onclick="play();location.href = '.'"> > Ignore</button>
-<audio id="buttonclick" src="random.click.ogg"></audio>
-<img class="fofimg" src="shaded-refine.png" alt="fofhi" height="300px">
+<audio id="buttonclick" src="https://parv66.tk/random.click.ogg"></audio>
+<img class="fofimg" src="https://parv66.tk/shaded-refine.png" alt="fofhi" height="300px">
 </body>
 </html>
