--- a/creations/e.html
+++ b/creations/e.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <header>
+     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <style>
     .tooltip {
   text-decoration: none;
@@ -69,6 +71,7 @@ p {
   background: #FFFFAA;
 }
   </style>
+  </header>
   <body>
     <h1>Minecraft Style Tooltips!</h1>
 <div id="minetip-tooltip">
