--- a/creations/index.html
+++ b/creations/index.html
@@ -4,13 +4,17 @@
     <link rel="stylesheet" href="creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
     <script src="creations.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   </head>
   <body>
+    <div id="minetip-tooltip">
+  <span class="minetip-title" id="minetip-text">Minecraft Tip</span>
+</div>
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
     <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"></a></div>
-    <div class="box"></div>
+    <div class="box"><span class="minetext" data-mctitle="Orange">elo</span></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
