--- a/creations/index.html
+++ b/creations/index.html
@@ -3,8 +3,7 @@
   <head>
     <link rel="stylesheet" href="creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
-     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="creations.js"></script>
+     
   </head>
   <body>
     <div id="minetip-tooltip">
@@ -14,7 +13,7 @@
   <h1>Large Chest</h1>
   <div class="boxes">
     <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"></a></div>
-    <div class="box"><span class="minetext" data-mctitle="Orange">elo</span></div>
+    <div class="box"><span class="minetext" data-mctitle="Orange">t1</span></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
@@ -121,4 +120,6 @@
   </div>
 </div>
   </body>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="creations.js"></script>
 </html>
