--- a/creations/index.html
+++ b/creations/index.html
@@ -12,8 +12,8 @@
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
-    <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"></a></div>
-    <div class="box"><span class="minetext" data-mctitle="Orange">t1</span></div>
+    <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"><span class="minetext" data-mctitle="Copper++ /nAn Addon That Adds More Uses For Copper And New Mechanics"></span></a></div>
+    <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
