--- a/creations/index.html
+++ b/creations/index.html
@@ -12,7 +12,7 @@
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
-    <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"><span class="minetext" data-mctitle="Copper++ Addon"></span></a></div>
+    <div class="box"><a class="copperplusplus" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
