--- a/creations/index.html
+++ b/creations/index.html
@@ -6,7 +6,7 @@
      
   </head>
   <body>
-   <img class="chest" src="https://parv66.tk/chest.png"
+   <img class="chest" src="https://parv66.tk/chest.png"></img>
     <div id="minetip-tooltip">
   <span class="minetip-title" id="minetip-text">Minecraft Tip</span>
 </div>
