--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
      <script src="oof.js"></script>
      <img src="logo.png" class="logo">
      <link rel="stylesheet" href="style.css">
+     <meta property="og:type" content="website">
+     <meta property="og:title" content="website title" />
+     <meta property="og:description" content="website description" />
+     <meta property="og:url" content="website url" />
+     <meta property="og:image" content="full thumbnail path" />
   </head>
  <body>
   <br>
