--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
      <script src="oof.js"></script>
      <img src="logo.png" class="logo">
      <link rel="stylesheet" href="style.css">
-     <meta property="og:type" content="website">
-     <meta property="og:title" content="website title" />
-     <meta property="og:description" content="website description" />
-     <meta property="og:url" content="website url" />
-     <meta property="og:image" content="full thumbnail path" />
+     <meta property="og:type" content="parv66.tk">
+     <meta property="og:title" content="PARV66.inc" />
+     <meta property="og:description" content="PARV66.inc idk what else" />
+     <meta property="og:url" content="https://parv66.tk" />
+     <meta property="og:image" content="https://parv66.tk/parv66.uwu.png" />
   </head>
  <body>
   <br>
