--- a/creations/index.html
+++ b/creations/index.html
@@ -3,7 +3,11 @@
   <head>
     <link rel="stylesheet" href="creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
-     
+    <meta property="og:type" content="parv66.tk/creations/">
+    <meta property="og:title" content="Awesome and cool and good and stuff" />
+    <meta property="og:description" content="My *ahEm*- My- *cough-cough* Work i made (pls)" />
+    <meta property="og:url" content="https://parv66.tk/creations/" />
+    <meta property="og:image" content="https://parv66.tk/parv66.uwu.png" />
   </head>
   <body>
    <img class="chest" src="https://parv66.tk/chest.png"></img>
