--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <meta property="og:title" content="PARV66.inc" />
      <meta property="og:description" content="PARV66.inc idk what else" />
      <meta property="og:url" content="https://parv66.tk" />
-     <meta property="og:image" content="https://parv66.tk/parv66.uwu.png" />
+     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg" />
   </head>
  <body>
   <br>
