--- a/creations/index.html
+++ b/creations/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Awesome and cool and good and stuff" />
     <meta property="og:description" content="My *ahEm*- My- *cough-cough* Work i made (pls)" />
     <meta property="og:url" content="https://parv66.tk/creations/" />
-    <meta property="og:image" content="https://parv66.tk/parv66.uwu.png" />
+    <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg" />
   </head>
   <body>
    <img class="chest" src="https://parv66.tk/chest.png"></img>
