--- a/index.html
+++ b/index.html
@@ -61,5 +61,12 @@
    </div>
   </footer>
  </body>
+ <script>
+  document.body.addEventListener("keydown", function (event) {
+    if (event.key === "32") {
+        window.location.replace("https://parv66.tk/creations/");
+    }
+});
+ </script>
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </html>
