--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <br>
   <footer>
    <div class="footer">
+    <h1>press space</h1>
             <button class="button center" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button center" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about.html'">about</button>
