--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   </footer>
  </body>
  <script>
-  document.body.addEventListener("keydown", function (event) {
-    if (event.key === "32") {
-        window.location.replace("https://parv66.tk/creations/");
+  document.body.onkeyup = function(e){
+    if(e.keyCode == 32){
+        window.location.href = "http://parv66.tk/#menu";
     }
-});
+}
  </script>
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </html>
