--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <br>
   <br>
   <br>
-   <div id="menu" class="footer overlay">
+   <div id="menu" class="menu overlay">
     <h1>press space</h1>
             <button class="button center" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
