--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     if(e.keyCode == 32){
         window.location.href = "http://parv66.tk/#menu";
     }
+   else if(e.keyCode == 16){
+        window.location.href = "http://parv66.tk";
+   }
 }
  </script>
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
