--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
  <body>
   <br>
   <br>
+  <h6>Press Space To Open Menu!</h6>
   <br>
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h1>press space</h1>
+    <h6>Press Shift To Exit!</h6>
             <button class="button center" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
             <button class="button center" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about.html'">about</button>
