--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    }
 }
   function menuopen() {
-  location.replace("https://parv66.tk/#menu")
+  window.location("https://parv66.tk/#menu")
 }
   function menuclose() {
      history.go(-1);
