--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
      <script src="err.js"></script>
      <script src="oof.js"></script>
      <img src="logo.png" class="logo">
+     <title>PARV66.inc</title>
+     <meta name="title" content="PARV66.inc">
+     <meta name="description" content="parv66.inc is a... thing.  yep a thing.    idk what else...    ok bye">
      <link rel="stylesheet" href="style.css">
      <meta property="og:type" content="parv66.tk">
      <meta property="og:title" content="PARV66.inc" />
