--- a/index.html
+++ b/index.html
@@ -45,20 +45,18 @@
   <br>
   <br>
    <div id="menu" class="menu overlay">
-    <h6>Press <a class="mcTextMineGold" href="https://parv66.tk/">Shift</a> To Exit!</h6>
-            <button class="button center" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
+    <h3>Press <a class="mcTextMineGold" href="https://parv66.tk/">Shift</a> To Exit!</h3>
+            <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
-            <button class="button center" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about.html'">about</button>
+            <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
             <br>
-            <button class="button center" onclick="play();location.href = 'https://mcpedl.com/user/parv66_yt/'">addons</button>
+            <button class="button" onclick="play();location.href = 'https://parv66.tk/creations/'" test="https://mcpedl.com/user/parv66_yt/">creations</button>
             <br>
-            <button class="button center" onclick="play();location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'">random</button>
+            <button class="button" onclick="play();location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'">random</button>
             <br>
-            <button class="button center" onclick="play();location.href = 'https://discordapp.com/users/622702599468220446/'">contact</button>
+            <button class="button" onclick="play();location.href = 'https://discordapp.com/users/622702599468220446/'">contact</button>
             <br>
-            <button class="button center" onclick="playoof()">oof</button>
-            <br>
-            <button class="button ttbtn" onclick="play();err()">???</button>
+            <button class="button" onclick="play();err()">???</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="buttonoofclick" src="oof.ogg"></audio>
      <audio id="errors" src="error.666.ogg"></audio>
