--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
      <audio id="buttonoofclick" src="oof.ogg"></audio>
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
+  <footer>
+  </footer>
  </body>
  <script>
   document.body.onkeyup = function(e){
