--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
   <footer>
+   <h4>footer</h4><br>
+   <a href="#" class="cord"></a>
+   <a href="#" class="youtube"></a>
   </footer>
  </body>
  <script>
