--- a/index.html
+++ b/index.html
@@ -68,12 +68,22 @@
   </footer>
  </body>
  <script>
+  var modal = document.getElementById('menu');
+
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+ </script>
+ <script>
+  var modal = document.getElementById('menu');
   document.body.onkeyup = function(e){
     if(e.keyCode == 32){
-        window.location.href = "http://parv66.tk/#menu";
+        document.getElementById('menu').style.display='block' style="width:auto;"
     }
    else if(e.keyCode == 16){
-        window.location.href = "http://parv66.tk";
+        modal.style.display = "none";
    }
 }
  </script>
