--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  <body>
   <br>
   <br>
-  <h3>Press <a class="mcTextMineGold" href="https://parv66.tk/#menu">Space</a> To Open Menu!</h3>
+  <h3>Press <a class="mcTextMineGold" href="" onclick="document.getElementById('menu').style.display='block'">Space</a> To Open Menu!</h3>
   <br>
   <br>
   <br>
@@ -80,7 +80,7 @@ window.onclick = function(event) {
   var modal = document.getElementById('menu');
   document.body.onkeyup = function(e){
     if(e.keyCode == 32){
-        document.getElementById('menu').style.display='block' style="width:auto;"
+        document.getElementById('menu').style.display='block'"
     }
    else if(e.keyCode == 16){
         modal.style.display = "none";
