--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
   <footer>
-   <h4>footer hello foot
-   </h4><br>
+   <h4>footer</h4><br>
    <a href="#" class="cord"></a>
    <a href="#" class="youtube"></a>
   </footer>
