--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ $(document).ready(function(){
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
   <footer>
-   <h4>footer is loocking gud</h4><br>
+   <h4>footer is looking gud</h4><br>
    <a href="" class="cord"></a>
    <a href="" class="youtube"></a>
   </footer>
