--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ document.querySelector(document).ready(function(){
   <br>
   <br>
   <h3>Press <a id="menutoggle" class="mcTextPurple">Space</a> To Open Menu!</h3>
+  <h3>uhh help testing</h3>
   <br>
   <br>
   <br>
